src/test/deca/context/invalid/not_enough_arg.deca
//ERROR :9
class A{
void meth(int a, int b){
    print(a+b);
    }
}
{
A barce = new A();
A.meth(3);
}